--- a/WireGuardCommand/Pages/Project/ProjectCreate.razor
+++ b/WireGuardCommand/Pages/Project/ProjectCreate.razor
@@ -1,7 +1,7 @@
 ﻿@page "/ProjectCreate"
 
 @{
-    var project = ProjectManager.CurrentProject;
+    var project = Cache.CurrentProject;
 }
 
 <div class="container">
