--- a/WireGuardCommand/Pages/Project/ProjectLoad.razor.css
+++ b/WireGuardCommand/Pages/Project/ProjectLoad.razor.css
@@ -2,6 +2,13 @@
     flex: 1;
 
     display: flex;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.dialog {
+    display: flex;
     flex-direction: column;
 
     gap: 0.5rem;
