--- a/WireGuardCommand/Pages/Project/ProjectDelete.razor
+++ b/WireGuardCommand/Pages/Project/ProjectDelete.razor
@@ -15,8 +15,8 @@
         {
             <div>Are you sure you want to delete the project @metadata.Name?</div>
             <div style="display: flex; flex-direction: row; gap: 0.5rem">
-                <button style="flex: 3" class="btn-primary" @onclick="Confirm">Confirm</button>
-                <button style="flex: 7" class="btn-unsafe" @onclick="Cancel">Cancel</button>
+                <button style="flex: 3" class="btn-unsafe" @onclick="Confirm">Confirm</button>
+                <button style="flex: 7" class="btn-primary" @onclick="Cancel">Cancel</button>
             </div>
         }
         else
