--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -17,7 +17,7 @@
         }
 
         <div class="project-view-header">
-            <div style="flex: 1; display: flex; flex-direction: column">
+            <div style="display: flex; flex-direction: column">
                 <div style="font-weight: bold; font-size: 1.25rem">@project.Metadata.Name</div>
 
                 @if(HasUnsavedChanges)
@@ -25,6 +25,8 @@
                     <div style="font-size: 0.75rem">Unsaved Changes</div>
                 }
             </div>
+            <button class="btn-primary" disabled="@(!HasUnsavedChanges)" @onclick="SaveChangesAsync">Save</button>
+            <div style="flex: 1"></div>
             <button class="btn-unsafe" @onclick="GoBack">Close Project</button>
         </div>
 
