Moved dialog style to global css.

--- a/WireGuardCommand/Pages/Project/ProjectDelete.razor
+++ b/WireGuardCommand/Pages/Project/ProjectDelete.razor
@@ -13,7 +13,7 @@
 
         @if(metadata is not null)
         {
-            <div>Are you sure you want to delete the project @metadata.Name?</div>
+            <div>Are you sure you want to delete <span style="color: darkgray">@metadata.Name?</span></div>
             <div style="display: flex; flex-direction: row; gap: 0.5rem">
                 <button style="flex: 3" class="btn-unsafe" @onclick="Confirm">Confirm</button>
                 <button style="flex: 7" class="btn-primary" @onclick="Cancel">Cancel</button>
