Added peer models and seedable curve keys.

--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -38,6 +38,7 @@
                     <button @onclick="GenerateSeed" class="btn-primary">Generate</button>
                 </div>
             </div>
+            <button class="btn-primary" @onclick="GenerateConfigs">Generate</button>
         </div>
     }
     else
