--- a/WireGuardCommand/Pages/Project/ProjectView.razor.css
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor.css
@@ -45,3 +45,32 @@
 
     padding: 1rem;
 }
+
+.tooltip {
+    position: relative;
+
+    width: 24px;
+    height: 24px;
+
+    background-image: url('./images/warning.png');
+    background-size: contain;
+
+    cursor: help;
+}
+.tooltip:hover .content {
+    display: inline;
+}
+.tooltip .content {
+    display: none;
+    position: absolute;
+
+    border: 1px solid #404040;
+    border-radius: 5px;
+
+    background-color: #303030;
+
+    padding: 1rem;
+
+    width: 45ch;
+    max-width: 70ch;
+}
