Migrated config writing to ProjectWriter class.

--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -119,7 +119,7 @@
                     <input @bind="project.ProjectData.ListenPort" />
                 </div>
             </div>
-            <button class="btn-primary" @onclick="GenerateConfigs">Generate Configs</button>
+            <button class="btn-primary" @onclick="GenerateConfigsAsync">Generate Configs</button>
         </div>
     }
     else
