--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -12,15 +12,16 @@
     {
         @if (!string.IsNullOrWhiteSpace(Error))
         {
-            <div class="project-view-error">
-                <span style="flex: 1;">@Error</span>
-                <span style="cursor: pointer; font-size: 1.25rem" @onclick="() => { Status = string.Empty; }">⨯</span>
+            <div class="alert-error">
+                <span class="alert-content">@Error</span>
+                <span style="cursor: pointer; font-size: 1.25rem" @onclick="() => { Error = string.Empty; }">⨯</span>
             </div>
         }
-        else if(!string.IsNullOrWhiteSpace(Status))
+
+        @if (!string.IsNullOrWhiteSpace(Status))
         {
-            <div class="project-view-status">
-                <span style="flex: 1;">@Status</span>
+            <div class="alert-status">
+                <span class="alert-content">@Status</span>
                 <span style="cursor: pointer; font-size: 1.25rem" @onclick="() => { Status = string.Empty; }">⨯</span>
             </div>
         }
