--- a/WireGuardCommand/Pages/Index.razor
+++ b/WireGuardCommand/Pages/Index.razor
@@ -1,17 +1,13 @@
 ﻿@page "/"
 
 @using System.Runtime.InteropServices
+
+@using WireGuardCommand.Components;
 @using WireGuardCommand.Pages.Project
 
 <div class="container">
 
-    @if(!string.IsNullOrWhiteSpace(Error))
-    {
-        <div class="alert-error">
-            <span class="alert-content">@Error</span>
-            <span style="cursor: pointer; font-size: 1.25rem" @onclick="() => { Error = string.Empty; }">⨯</span>
-        </div>
-    }
+    <Alert Type="Error" @bind-Content="Error"/>
 
     <div class="project-list" @onclick="() => { SelectedProject = null; }">
         <div class="project-list-header">
