--- a/WireGuardCommand/Components/Alert.razor
+++ b/WireGuardCommand/Components/Alert.razor
@@ -1,6 +1,6 @@
 ﻿@if(!string.IsNullOrWhiteSpace(this.Content))
 {
-    <div class="alert @(this.Type.ToLower())">
+    <div class="alert @(this.Type.ToString().ToLower())">
         <span class="alert-content">@(this.Content)</span>
         <span class="alert-close" @onclick="() => { this.Content = string.Empty; }">x</span>
     </div>
