--- a/WireGuardCommand/Pages/Project/ProjectCreate.razor
+++ b/WireGuardCommand/Pages/Project/ProjectCreate.razor
@@ -1,13 +1,14 @@
 ﻿@page "/ProjectCreate"
 
 @using WireGuardCommand.Components;
+@using WireGuardCommand.Components.Models;
 
 @{
     var project = Cache.CurrentProject;
 }
 
 <div class="container">
-    <Alert Type="Error" @bind-Content="Error"/>
+    <Alert Type="AlertType.Error" @bind-Content="Error"/>
 
     <div class="project-create-header">
         <div style="font-weight: bold; font-size: 1.25rem; padding: 1rem">Create Project</div>
