--- a/WireGuardCommand/Pages/Project/ProjectLoad.razor
+++ b/WireGuardCommand/Pages/Project/ProjectLoad.razor
@@ -1,13 +1,14 @@
 ﻿@page "/ProjectLoad"
 
 @using WireGuardCommand.Components;
+@using WireGuardCommand.Components.Models;
 
 @{
     var project = Cache.CurrentProject;
 }
 
 <div class="container">
-    <Alert Type="Error" @bind-Content="Error" />
+    <Alert Type="AlertType.Error" @bind-Content="Error" />
 
     <div class="dialog">
         @if (project is not null &&
