--- a/WireGuardCommand/Components/Tooltip.razor.css
+++ b/WireGuardCommand/Components/Tooltip.razor.css
@@ -1,20 +1,32 @@
 ﻿.tooltip {
-    position: relative;
+    width: 1rem;
+    height: 1rem;
 
-    width: 24px;
-    height: 24px;
-
-    background-image: url('./images/warning.png');
+    background-image: url('/images/info.png');
     background-size: contain;
 
     cursor: help;
 }
-.tooltip:hover .content {
-    display: inline;
+
+.tooltip-container {
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgba(0, 0, 0, 0.5);
+
+    position: fixed;
+
+    left: 0;
+    top: 0;
+
+    width: 100%;
+    height: 100%;
 }
-.tooltip .content {
-    display: none;
-    position: absolute;
+
+.tooltip-content {
+    position: relative;
 
     border: 1px solid #404040;
     border-radius: 5px;
@@ -26,7 +38,14 @@
     width: 45ch;
     max-width: 70ch;
 }
-
-.tooltip .content p {
+.tooltip-content p {
     margin: 0;
+}
+.tooltip-exit {
+    position: absolute;
+
+    top: 1ch;
+    right: 1ch;
+
+    cursor: pointer;
 }
