--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -48,9 +48,8 @@
             <div style="display: flex; flex-direction: column">
                 <div style="display: flex; flex-direction: row; gap: 0.25rem; align-items: center">
                     <label>No. of Clients</label>
-                    <Tooltip 
-                        Title="Number of Clients" 
-                        Content="Sets the number of generated client peers. <br/><br/>Limited by the transit subnet, but can be manually extended later if within subnet transit limits." />
+                    <Tooltip Title="Number of Clients" 
+                             Content="Sets the number of generated client peers. <br/><br/>Limited by the transit subnet, but can be manually extended later if within subnet transit limits." />
                 </div>
                 <div style="display: flex; gap: 0.5rem">
                     <input @bind="project.ProjectData.NumberOfClients" />
@@ -58,42 +57,70 @@
             </div>
 
             <div style="display: flex; flex-direction: column">
-                <label>Subnet</label>
+                <div style="display: flex; gap: 0.25rem; align-items: center">
+                    <label>Subnet</label>
+                    <Tooltip Title="Subnet"
+                             Content="Sets the transit network that exists between the clients local subnet and the hosts internal set of subnets.<br/><br/>This avoids conflicts and allows easier filtering. It's also what limits the amount of client peers.<br/><br/><b>Example</b><br/>10.0.0.0/24"/>
+                </div>
+
                 <div style="display: flex; gap: 0.5rem">
                     <input @bind="project.ProjectData.Subnet" />
                 </div>
             </div>
 
             <div style="display: flex; flex-direction: column">
-                <label>DNS (Optional)</label>
+                <div style="display: flex; gap: 0.25rem; align-items: center">
+                    <label>DNS (Optional)</label>
+                    <Tooltip Title="DNS"
+                             Content="Allows client side remote subnet name resolution when you have a DNS server on the hosting subnet, often used when on-premise DNS exists.<br/><br/>A DNS suffix can also be added here allowing client name resolution without FQDN usage in a domain environment.<br/><br/><b>Example</b><br/>10.0.0.10<br/>domain.local" />
+                </div>
+
                 <div style="display: flex; gap: 0.5rem">
                     <input @bind="project.ProjectData.DNS" />
                 </div>
             </div>
 
             <div style="display: flex; flex-direction: column">
-                <label>Allowed IPs</label>
+                <div style="display: flex; gap: 0.25rem; align-items: center">
+                    <label>Allowed IPs</label>
+                    <Tooltip Title="Allowed IPs"
+                             Content="Sets the subnets that the client will attempt routing to through an established WireGuard tunnel.<br/><br/>When 0.0.0.0/0 is specified, all traffic will route through the tunnel." />
+                </div>
+
                 <div style="display: flex; gap: 0.5rem">
                     <input @bind="project.ProjectData.AllowedIPs" />
                 </div>
             </div>
 
             <div style="display: flex; flex-direction: column">
-                <label>Endpoint</label>
+                <div style="display: flex; gap: 0.25rem; align-items: center">
+                    <label>Endpoint</label>
+                    <Tooltip Title="Endpoint"
+                             Content="The endpoint is not mandatory.<br/><br/>However, it enforces the client to connect to the hosting endpoint and not to the endpoint that the public key routes to." />
+                </div>
+
                 <div style="display: flex; gap: 0.5rem">
                     <input @bind="project.ProjectData.Endpoint" />
                 </div>
             </div>
 
             <div style="display: flex; flex-direction: column">
-                <label>Use Preshared Keys</label>
+                <div style="display: flex; gap: 0.25rem; align-items: center">
+                    <label>Use Preshared Keys</label>
+                    <Tooltip Title="Preshared Keys"
+                             Content="Adds another layer of security where the peers have to not only match their keypairs, but also have to pass a pre-shared key check." />
+                </div>
                 <div style="display: flex; gap: 0.5rem">
                     <input type="checkbox" @bind="project.ProjectData.UsePresharedKeys" />
                 </div>
             </div>
 
             <div style="display: flex; flex-direction: column">
-                <label>Use Last Address</label>
+                <div style="display: flex; gap: 0.25rem; align-items: center">
+                    <label>Use Last Address</label>
+                    <Tooltip Title="Last Address"
+                             Content="Assigns the last IP in the subnet to the server.<br/><br/>This is useful where you want to match the client IP to their id." />
+                </div>
                 <div style="display: flex; gap: 0.5rem">
                     <input type="checkbox" @bind="project.ProjectData.UseLastAddress" />
                 </div>
@@ -102,9 +129,8 @@
             <div style="display: flex; flex-direction: column">
                 <div style="display: flex; flex-direction: row; gap: 0.25rem; align-items: center">
                     <label>Listen Port</label>
-                    <div class="tooltip">
-                        <div class="content"><b>Listen Port</b><br /><br />Sets the WireGuard interface UDP listen port for the server and peers.<br /><br />It must be unique in the case of other existing interfaces.</div>
-                    </div>
+                    <Tooltip Title="Listen Port"
+                             Content="Sets the WireGuard interface UDP listen port for the server and peers.<br /><br />It must be unique in the case of other existing interfaces." />
                 </div>
                 <div style="display: flex; gap: 0.5rem">
                     <input @bind="project.ProjectData.ListenPort" />
